--- a/jour1.html
+++ b/jour1.html
@@ -496,16 +496,14 @@ class: center, middle
 
 .red[**2011**] : Le ministère s'engage dans la politique gouvernementale en faveur de l’ouverture et du partage des données publiques. Les premiers jeux de données sont publiés par le Ministère sur data.gouv.fr
 
-.red[**2013**] : Adoption de la première feuille de route « open data culturel ». Elle est mise à jour en [**2020**](https://www.culture.gouv.fr/Thematiques/Innovation-numerique/Actualites/Feuille-de-route-open-data2). Elle comporte 6 axes pour une stratégie numérique de diffusion et de réutilisation des données publiques numériques du secteur culturel.
+.red[**2013**] : Adoption de la première feuille de route « open data culturel ». Elle est mise à jour en [**2019**](https://www.culture.gouv.fr/Thematiques/Innovation-numerique/Actualites/Feuille-de-route-open-data2). Elle comporte 6 axes pour une stratégie numérique de diffusion et de réutilisation des données publiques numériques du secteur culturel.
 
 .red[**2014**] : La BnF ouvre ses métadonnées descriptives en "Licence Ouverte" 
 .red[**2014/2015**] : Publication de la feuille de route «Métadonnées culturelles et transition Web 3.0»
 
-.red[**2016**] : Ouverture du portail data.cuture.gouv.fr
+.red[**2016**] : Ouverture du portail [data.cuture.gouv.fr](https://data.culture.gouv.fr/))
 
 .red[**2017**] : Les Archives nationales optent pour l’ouverture et la gratuité des données
-
-.red[**2018**] : Une nouvelle feuille de route stratégique
 
 .red[**2021**] : Une nouvelle nouvelle feuille de route "Données et contenus culturels" et nomination d'un AMDAC
 
@@ -526,24 +524,26 @@ relations entre les usagers et le service public culturel ;
 
 ---
 
-### Un portail : [data.culture.gouv.fr](https://data.culture.gouv.fr/pages/home/)
+### Pour les .red[services centraux, les DRAC et les SCN] : des données hébergées sur data.culture.gouv.fr et visibles (aussi) sur data.gouv.fr
 
 ![](./img/data.culture.gouv.fr.png)
 
-Le portail des données ouvertes du Ministère de la Culture met à disposition les données de l'administration centrale, d'une DRAC ou d'un SCN, référence les données des établissements publics et moissonne automatiquement ces données sur data.gouv.fr, pour pouvoir les exposer sur les deux plateformes à la fois. 
+Pour les les données de l'administration centrale, d'une DRAC ou d'un SCN, la mise à disposition des données est à effectuer sur le site  .red[data.culture.gouv.fr.]
+
+Afin d’améliorer la visibilité des données culturelles, le portail data.culture.gouv.fr est moissonné automatiquement par data.gouv.fr, pour pouvoir les exposer sur les deux plateformes à la fois. 
 
 
-*Pour toute information sur la mise à disposition de nouveaux jeux de données, contacter le département de l’innovation numérique (SG/SCPCI) via l’onglet « Contact » de la plateforme data.culture.gouv.fr.*
+*Pour toute information sur la mise à disposition de nouveaux jeux de données, contacter le département du numérique pour la transformation des politiques culturelles et de l'administration des données (Service du numérique) via l’onglet « Contact » de la plateforme data.culture.gouv.fr.*
 
 ---
 
-### .red[Pour les établissements publics] : des données hébergées sur data.gouv.fr, visibles sur data.culture.fr
+### .red[Pour les établissements publics] : des données hébergées sur data.gouv.fr et visibles (aussi) sur data.culture.fr
 
 Pour les établissements publics, la mise à disposition des données est à effectuer sur le site .red[data.gouv.fr.]
 
 Afin d’améliorer la visibilité des données culturelles, le Ministère référence également les données des établissements sur la plateforme ministérielle data.culture.gouv.fr.
 
-Cela implique la création d’une page dédiée à l'établissement, puis la publication des jeux de données conformément [aux modalités précisées par la DINSIC](https://doc.data.gouv.fr/jeux-de-donnees/publier-un-jeu-de-donnees/)
+Cela implique la création d’une page dédiée à l'établissement, puis la publication des jeux de données conformément [aux modalités précisées par la DINUM](https://doc.data.gouv.fr/jeux-de-donnees/publier-un-jeu-de-donnees/)
 
 &gt; **Le ministère mettra en place les mécanismes nécessaires pour que toutes les données publiées de cette façon soient ensuite automatiquement visibles sur data.culture.gouv.fr.**
 
@@ -1265,6 +1265,19 @@ class: middle
 
 ---
 
+### Les .red[freins] à l'ouverture des données
+
+* **Les ressources nécessaires (temps, RH et finances)** : extraction, anonymisation, hébergement des données, numérisation des œuvres ...  
+_Pour y palier : accompagner les opérateurs et évaluer les risques/bénéfices, fixer une feuille de route open data pour prioriser/rationnaliser._
+
+* **Une mise en qualité insuffisante** : une qualité jugée suffisante pour des usages internes pour lesquels elles sont produites peut être jugée insuffisante pour le grand public : fichiers incomplets, de mauvaise qualité ou avec des erreurs.  
+_Pour y palier : compter sur l’intelligence collective et l'interraction avec les usagers pour permettre l'amélioration des données (avec le crowdsourcing par exemple)._
+
+* **La crainte d'un mauvais usage** : quelques rares cas de mauvaises réutilisations avec des données détournées de leur contexte ou utilisées à de mauvaises fins.  
+_Pour y palier : renseigner les métadonnées qui accompagnent le jeu de données._
+
+---
+
 ### Bien penser sa stratégie open data, c'est .red[s'assurer l'enthousiasme des gestionnaires et réutilisateurs]
 
 .pull-left[
@@ -1310,6 +1323,8 @@ Une bonne stratégie consiste à réduire les frictions :
 ---
 
 ### Bibliographie
+
+* [**Feuille de route – Données et contenus culturels**](https://www.culture.gouv.fr/Espace-documentation/Documentation-administrative/Feuille-de-route-Donnees-et-contenus-culturels), Publiée par le ministère de la Culture, septembre 2021
 
 * [**Guide pratique dédié à l’ouverture des données publiques culturelles**](http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles)
 Publié par le ministère de la Culture, juillet 2019 
