--- a/jour1.html
+++ b/jour1.html
@@ -66,6 +66,28 @@ Les productions de Datactivist sont librement réutilisables selon les termes de
 6. Concevoir une stratégie d'ouverture de données : quelques grands principes.
 
 ---
+class: inverse, center, middle
+
+
+# De quoi parle t-on ?
+
+---
+
+### Imaginons...
+
+Vous êtes journaliste (ou étudiant·e en master ou simplement avec une grande curiosité) et vous travaillez sur les festivals en France. Vous souhaitez étudier : la fréquentation, l'historique des festivals... 
+
+* De quoi avez-vous besoin ?
+* Comment allez-vous procéder ?
+
+---
+### Un exemple
+
+
+![](img/000010.png)
+
+
+---
 
 class: inverse, center, middle
 
