--- a/jour1.html
+++ b/jour1.html
@@ -73,19 +73,12 @@ class: inverse, center, middle
 
 ---
 
-### Imaginons...
+### .red[Imaginons...]
 
 Vous êtes journaliste (ou étudiant·e en master ou simplement avec une grande curiosité) et vous travaillez sur les festivals en France. Vous souhaitez étudier : la fréquentation, l'historique des festivals... 
 
 * De quoi avez-vous besoin ?
 * Comment allez-vous procéder ?
-
----
-### Un exemple
-
-
-![](img/000010.png)
-
 
 ---
 
@@ -546,14 +539,13 @@ relations entre les usagers et le service public culturel ;
 
 ---
 
-### Pour les .red[services centraux, les DRAC et les SCN] : des données hébergées sur data.culture.gouv.fr et visibles (aussi) sur data.gouv.fr
+### Pour les .red[services centraux, les DRAC et les SCN] : des données hébergées sur data.culture.gouv.fr
 
 ![](./img/data.culture.gouv.fr.png)
 
 Pour les les données de l'administration centrale, d'une DRAC ou d'un SCN, la mise à disposition des données est à effectuer sur le site  .red[data.culture.gouv.fr.]
 
-Afin d’améliorer la visibilité des données culturelles, le portail data.culture.gouv.fr est moissonné automatiquement par data.gouv.fr, pour pouvoir les exposer sur les deux plateformes à la fois. 
-
+Afin d’améliorer la visibilité des données culturelles, **le portail data.culture.gouv.fr est moissonné automatiquement par data.gouv.fr**, pour pouvoir les exposer sur les deux plateformes à la fois. 
 
 *Pour toute information sur la mise à disposition de nouveaux jeux de données, contacter le département du numérique pour la transformation des politiques culturelles et de l'administration des données (Service du numérique) via l’onglet « Contact » de la plateforme data.culture.gouv.fr.*
 
