--- a/Jour2_version_2022.html
+++ b/Jour2_version_2022.html
@@ -4,7 +4,7 @@
     <title>L’ouverture des données publiques culturelles en pratique</title>
     <meta charset="utf-8" />
     <meta name="author" content="Datactivist - Anne-Laure Donzel" />
-    <meta name="date" content="2022-06-22" />
+    <meta name="date" content="2022-06-27" />
     <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist.css" rel="stylesheet" />
@@ -17,7 +17,7 @@ class: center, middle, inverse, title-slide
 # L’ouverture des données publiques culturelles en pratique
 ## Ministère de la Culture
 ### Datactivist - Anne-Laure Donzel
-### 2022-06-22
+### 2022-06-27
 
 ---
 
@@ -320,6 +320,12 @@ Quelques principes à retenir :
 * Compléter l'adresse postale par le code INSEE (afin de faciliter la géolocalisation dans le cas des noms de villes homonymes) ;
 * Utiliser la norme ISO 8601 pour les dates, format : « AAAA-MM-JJ ».
 * Faciliter au maximum le traitement par les réutilisateurs : uniformiser les saisies, rendre le fichier traitable par des machines...
+
+---
+
+### Les étapes de la .red[mise en qualité]
+
+![](img/etape_qualité.png)
 
 ---
 
