--- a/Biblio_ressources.html
+++ b/Biblio_ressources.html
@@ -12,7 +12,6 @@
 
 <meta name="author" content="Datactivist - Anne-Laure Donzel" />
 
-<meta name="date" content="2022-06-26" />
 
 <title>Bibliographie et ressources</title>
 
@@ -283,6 +282,7 @@ if (window.hljs) {
 
 
 
+
 </head>
 
 <body>
@@ -293,15 +293,19 @@ if (window.hljs) {
 <h1 class="title toc-ignore">Bibliographie et ressources</h1>
 <h3 class="subtitle">Cours open data - Ministère de la Culture</h3>
 <h4 class="author">Datactivist - Anne-Laure Donzel</h4>
-<h4 class="date">2022-06-26</h4>
+<h4 class="date">Octobre 2022</h4>
 
 
 
+<div class="fullwidth">
 <div id="rapports-et-guides-pratiques" class="section level1">
 <h1>Rapports et guides pratiques</h1>
 <ul>
 <li><p><strong>Feuille de route <em>Données et contenus
 culturels</em></strong>, URL : <a href="https://www.culture.gouv.fr/Espace-documentation/Documentation-administrative/Feuille-de-route-Donnees-et-contenus-culturels" class="uri">https://www.culture.gouv.fr/Espace-documentation/Documentation-administrative/Feuille-de-route-Donnees-et-contenus-culturels</a></p></li>
+<li><p><strong>Politique du Ministère de la Culture pour les codes
+sources, algorithmes et codes sources</strong>, URL : (<a href="https://www.culture.gouv.fr/content/download/314733/pdf_file/Politique_CALL_version_01_2022-06-29.pdf?version=1" class="uri">https://www.culture.gouv.fr/content/download/314733/pdf_file/Politique_CALL_version_01_2022-06-29.pdf?version=1</a>),
+juin 2022</p></li>
 <li><p><strong>Guide pratique dédié à l’ouverture des données publiques
 culturelles</strong> Publié par le ministère de la Culture, juillet
 2019, URL : <a href="http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles" class="uri">http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles</a></p></li>
@@ -349,6 +353,7 @@ patrimoine culturel,” in Numérique et recherche en histoire de l’art,
 <li><p>Tutoriel OpenRefine 3.4 : nettoyer, préparer et transformer des
 données - 06/11/2020[<a href="http://bit.ly/tutoOpenRefine" class="uri">http://bit.ly/tutoOpenRefine</a>]</p></li>
 <li><p>Cas concret d’utilisation d’OpenRefine pour les archives[<a href="https://medium.com/@seeksanusername/cas-concret-dutilisation-d-openrefine-pour-les-archives-442726996b74" class="uri">https://medium.com/@seeksanusername/cas-concret-dutilisation-d-openrefine-pour-les-archives-442726996b74</a>]</p></li>
+<li><p>Cas pratique à partir d’un inventaire en pdf <a href="https://patrimoine-et-numerique.fr/tutoriels/69-38-d-un-inventaire-pdf-a-un-fichier-xml-cas-pratique-openrefine">https://patrimoine-et-numerique.fr/tutoriels/69-38-d-un-inventaire-pdf-a-un-fichier-xml-cas-pratique-openrefine</a></p></li>
 </ul>
 </div>
 <div id="journées-détude" class="section level1">
@@ -361,6 +366,59 @@ et Numérique 2021</em></a></p></li>
 <li><p>Documentation de la journée Wikimédia <a href="https://meta.wikimedia.org/wiki/Wikim%C3%A9dia_France/Groupes_de_travail/Groupes_th%C3%A9matiques/GLAM/Journ%C3%A9es_Wikimedia_Culture_et_Num%C3%A9rique_2019/Documentation"><em>Culture
 et Numérique 2019</em></a></p></li>
 </ul>
+</div>
+<div id="exemples-de-réutilisation" class="section level1">
+<h1>Exemples de réutilisation</h1>
+<div id="storymap" class="section level2">
+<h2>Storymap</h2>
+<ul>
+<li><p>AD du Val-de-Marne : <a href="https://archives.valdemarne.fr/r/358/la-story-map/" class="uri">https://archives.valdemarne.fr/r/358/la-story-map/</a></p></li>
+<li><p>AD des Bouches-du-Rhônes : <a href="https://www.archives13.fr/n/l-exposition-coloniale-de-marseille-de/n:298" class="uri">https://www.archives13.fr/n/l-exposition-coloniale-de-marseille-de/n:298</a></p></li>
+<li><p>Smithsonian Gardens : <a href="https://gardens.si.edu/collections/plants/living-collections-management/story-maps/" class="uri">https://gardens.si.edu/collections/plants/living-collections-management/story-maps/</a></p></li>
+</ul>
+</div>
+<div id="chronologies-interactives" class="section level2">
+<h2>Chronologies interactives</h2>
+<ul>
+<li><p>Musée d’Orsay : <a href="https://sculptures-polychromes.musee-orsay.fr/index.php/Browse/objects" class="uri">https://sculptures-polychromes.musee-orsay.fr/index.php/Browse/objects</a></p></li>
+<li><p>Musée des Beaux-Arts de Lyon : <a href="https://www.mba-lyon.fr/fr/type-de-collection/arts-graphiques" class="uri">https://www.mba-lyon.fr/fr/type-de-collection/arts-graphiques</a></p></li>
+</ul>
+</div>
+<div id="cartes" class="section level2">
+<h2>Cartes</h2>
+<ul>
+<li><p>Umap : carte du matrimoine parisien : <a href="https://umap.openstreetmap.fr/fr/map/le-matrimoine-parisien_273260#13/48.8592/2.3430" class="uri">https://umap.openstreetmap.fr/fr/map/le-matrimoine-parisien_273260#13/48.8592/2.3430</a></p></li>
+<li><p>Carte des archives d’Angers : <a href="https://archives.angers.fr/" class="uri">https://archives.angers.fr/</a></p></li>
+<li><p>Carte réalisée à partir des photos en open data des AM de
+Marseille : <a href="https://umap.openstreetmap.fr/fr/map/carte-des-photos-en-open-data-des-am-de-marseille_628303#12/43.2947/5.4252" class="uri">https://umap.openstreetmap.fr/fr/map/carte-des-photos-en-open-data-des-am-de-marseille_628303#12/43.2947/5.4252</a></p></li>
+</ul>
+</div>
+<div id="utilisation-de-wikidata" class="section level2">
+<h2>Utilisation de Wikidata</h2>
+<ul>
+<li><p>A partir des données des archives Nationales : <a href="https://twitter.com/daieuxdailleurs/status/1575026867228114944" class="uri">https://twitter.com/daieuxdailleurs/status/1575026867228114944</a>
+ou <a href="https://twitter.com/daieuxdailleurs/status/1566456581012717569" class="uri">https://twitter.com/daieuxdailleurs/status/1566456581012717569</a></p></li>
+<li><p>Le moteur de recherche Crotos : <a href="https://zone47.com/crotos/" class="uri">https://zone47.com/crotos/</a></p></li>
+</ul>
+</div>
+<div id="des-exemples-de-fichiers-en-open-data" class="section level2">
+<h2>Des exemples de fichiers en open data</h2>
+<ul>
+<li><p>Inventaires du musée de Saint-Raymond : <a href="https://www.data.toulouse-metropole.fr/explore/dataset/inventaire-principal-musee-saint-raymond/information/" class="uri">https://www.data.toulouse-metropole.fr/explore/dataset/inventaire-principal-musee-saint-raymond/information/</a></p></li>
+<li><p>Cartes postales des AD des Hauts-de-Seine : <a href="https://opendata.hauts-de-seine.fr/explore/dataset/cartes-postales/images/" class="uri">https://opendata.hauts-de-seine.fr/explore/dataset/cartes-postales/images/</a></p></li>
+</ul>
+</div>
+<div id="autres-exemples" class="section level2">
+<h2>Autres exemples</h2>
+<ul>
+<li><p>Intégré logiciel métier : l’Encycl’O des AM d’Orléans <a href="https://archives.orleans-metropole.fr/histoires-dorleans/lencyclo" class="uri">https://archives.orleans-metropole.fr/histoires-dorleans/lencyclo</a>
+et Cart’O <a href="https://archives.orleans-metropole.fr/histoires-dorleans/carto--histoires" class="uri">https://archives.orleans-metropole.fr/histoires-dorleans/carto--histoires</a></p></li>
+<li><p>Test de tableau de bord à partir d’un jeu de données des AN : <a href="https://aldonzel.github.io/moulins/test_flex.html" class="uri">https://aldonzel.github.io/moulins/test_flex.html</a></p></li>
+<li><p>La page des réutilisations des données culturelles sur data.gouv
+: <a href="https://www.data.gouv.fr/fr/reuses/?page_size=21&amp;topic=culture_and_recreation" class="uri">https://www.data.gouv.fr/fr/reuses/?page_size=21&amp;topic=culture_and_recreation</a></p></li>
+</ul>
+</div>
+</div>
 </div>
 
 
