--- a/jour1.html
+++ b/jour1.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 # Comprendre les enjeux de l’ouverture des données publiques culturelles
 ## Ministère de la Culture
 ### Datactivist
-### Octobre 2022
+### Avril 2023
 
 ---
 
