--- a/jour1.html
+++ b/jour1.html
@@ -59,9 +59,9 @@ Les productions de Datactivist sont librement réutilisables selon les termes de
 
 #### Open Data : comprendre les enjeux de l'ouverture des données publiques culturelles
 
-1. Origines historiques de l’ouverture des données 
-2. Les grands principes de l’ouverture des données 
-3. Enjeux de l'ouverture des données
+1. Comprendre la donnée : de quoi parle-t-on ? 
+2. Histoire de l'open data
+3. Les principaux enjeux de l'ouverture des données
 4. Cadre juridique de l’ouverture des données culturelles
 5. Plusieurs exemples #OpenGLAM
 6. Concevoir une stratégie d'ouverture de données : quelques grands principes.
@@ -143,6 +143,12 @@ Pensez à votre abonnement téléphonique, chaque mois, vous payez pour consomme
 
 Le volume des données créées et traitées ne cesse de croître en même temps que les capacités de calcul des ordinateurs. 
 ]
+
+---
+
+### A partir de ces .red[définitions]
+
+* Quelles données avez-vous dans vos services ?
 
 ---
 class:inverse,middle,center
@@ -262,74 +268,6 @@ Désiloter l'administration et ouvrir l'innovation, collaborer avec la société
 
 ---
 
-### Que signifie .red[“Open”] dans un contexte culturel ?
-
-* **L’Open Content** (les contenus ouverts) est la mise à disposition gratuite sur Internet des reproductions numériques des œuvres sous une licence garantissant leur libre accès et leur réutilisation par tous, sans restriction technique, juridique ou financière.
-
-* **L’Open Access** (le libre accès) est la mise à disposition gratuite en ligne de contenus numériques, sous licences libres (Creative commons, etc.) ou non.
-
-* **L’Open Knowledge** (la culture libre) est un mouvement social qui promeut la liberté de distribuer et de modifier des œuvres de l’esprit sous la forme d’œuvres libres. Il puise sa philosophie dans celle du logiciel libre en l’appliquant à la culture et à l’information.
-
-* **L’Open Data** (les données ouvertes), est la mise à disposition gratuite sur Internet de données sous une licence libre. 
-
----
-
-class: inverse, center, middle
-
-# 3 - Les principaux enjeux de l'open data 
-
----
-
-### .red[La transparence de la vie publique] et la participation citoyenne à l’action publique
-
-
-* Exemple avec les [**Données essentielles des conventions de subvention**](https://data.culture.gouv.fr/explore/dataset/donnees-essentielles-des-conventions-de-subvention/information/), année 2018
-
-.center[![](./img/donnees_conventions_subvention.png)]
-
----
-
-### La participation citoyenne .red[à l’action publique]
-
-* Exemple : [le **Grand Débat National**](https://granddebat.fr/), mars 2019
-
-
-.center[![](./img/grand_debat.png)]
-
----
-
-### .red[L’efficacité de l’action publique] : amélioration de la qualité des services publics 
-
-* Exemple : [**sauver des vies en mer**](https://damp-basin-47015.herokuapp.com/defis/2018/donneesauvetagemaritime.html) en prévenant les accidents maritimes
-
-.center[![](./img/previ-sauvetage.png)]
-
----
-
-### Le développement de .red[l’attractivité des territoires]
-
-* Le portail [**DATAtourisme**](https://www.datatourisme.gouv.fr/)
-
-.center[![](./img/DATAtourisme.jpg)]
-
----
-
-### Le soutien à .red[l’innovation économique et sociale]
-
-* Les données des [**valeurs foncières**](https://www.meilleursagents.com/prix-immobilier/dvf/) reprises par le site meilleurs agents, avril 2019
-
-.center[![](./img/dvf_meilleurs_agents.png)]
-
-
----
-
-### Une opportunité en matière de .red[démocratisation culturelle et de transmission des savoirs]
-
-* Le projet [**UrbanHist**](https://www.urban-hist.toulouse.fr/) à Toulouse
-
-.center[![](./img/urbanhist.jpg)]
-
----
 class: inverse, center, middle
 
 # Origines historiques de l'open data dans le monde et en France
@@ -525,7 +463,64 @@ class: center, middle
 
 ---
 
-### La feuille de route **Données et contenus culturels**
+class: inverse, center, middle
+
+# 3 - Les principaux enjeux de l'open data 
+
+---
+
+### .red[La transparence de la vie publique] et la participation citoyenne à l’action publique
+
+
+* Exemple avec les [**Données essentielles des conventions de subvention**](https://data.culture.gouv.fr/explore/dataset/donnees-essentielles-des-conventions-de-subvention/information/), année 2018
+
+.center[![](./img/donnees_conventions_subvention.png)]
+
+---
+
+### La participation citoyenne .red[à l’action publique]
+
+* Exemple : [le **Grand Débat National**](https://granddebat.fr/), mars 2019
+
+
+.center[![](./img/grand_debat.png)]
+
+---
+
+### .red[L’efficacité de l’action publique] : amélioration de la qualité des services publics 
+
+* Exemple : [**sauver des vies en mer**](https://damp-basin-47015.herokuapp.com/defis/2018/donneesauvetagemaritime.html) en prévenant les accidents maritimes
+
+.center[![](./img/previ-sauvetage.png)]
+
+---
+
+### Le développement de .red[l’attractivité des territoires]
+
+* Le portail [**DATAtourisme**](https://www.datatourisme.gouv.fr/)
+
+.center[![](./img/DATAtourisme.jpg)]
+
+---
+
+### Le soutien à .red[l’innovation économique et sociale]
+
+* Les données des [**valeurs foncières**](https://www.meilleursagents.com/prix-immobilier/dvf/) reprises par le site meilleurs agents, avril 2019
+
+.center[![](./img/dvf_meilleurs_agents.png)]
+
+
+---
+
+### Une opportunité en matière de .red[démocratisation culturelle et de transmission des savoirs]
+
+* Le projet [**UrbanHist**](https://www.urban-hist.toulouse.fr/) à Toulouse
+
+.center[![](./img/urbanhist.jpg)]
+
+---
+
+### .red[Focus sur le secteur culturel :] la feuille de route **Données et contenus culturels**
 
 Cette [feuille de route](https://www.culture.gouv.fr/Espace-documentation/Documentation-administrative/Feuille-de-route-Donnees-et-contenus-culturels). Elle concerne les données, les algorithmes et les codes sources.
 
@@ -574,6 +569,18 @@ Cela implique la création d’une page dédiée à l'établissement, puis la pu
 * Les **données financières** : financement, ressources, budgets annuels, subventions
 
 &gt; Important : les œuvres protégées par le droit d’auteur ou un droit voisin ne peuvent faire l’objet d’un droit de réutilisation, mais les œuvres entrées dans le domaine public relèvent pleinement de l’ouverture des données publiques.
+
+---
+
+### Que signifie .red[“Open”] dans un contexte culturel ?
+
+* **L’Open Content** (les contenus ouverts) est la mise à disposition gratuite sur Internet des reproductions numériques des œuvres sous une licence garantissant leur libre accès et leur réutilisation par tous, sans restriction technique, juridique ou financière.
+
+* **L’Open Access** (le libre accès) est la mise à disposition gratuite en ligne de contenus numériques, sous licences libres (Creative commons, etc.) ou non.
+
+* **L’Open Knowledge** (la culture libre) est un mouvement social qui promeut la liberté de distribuer et de modifier des œuvres de l’esprit sous la forme d’œuvres libres. Il puise sa philosophie dans celle du logiciel libre en l’appliquant à la culture et à l’information.
+
+* **L’Open Data** (les données ouvertes), est la mise à disposition gratuite sur Internet de données sous une licence libre. 
 
 
 ---
