--- a/Jour2_version_2023.html
+++ b/Jour2_version_2023.html
@@ -4,10 +4,10 @@
     <title>L’ouverture des données publiques culturelles en pratique</title>
     <meta charset="utf-8" />
     <meta name="author" content="Datactivist - Anne-Laure Donzel" />
-    <script src="libs/header-attrs/header-attrs.js"></script>
-    <link href="libs/remark-css/default.css" rel="stylesheet" />
-    <link href="libs/remark-css/datactivist.css" rel="stylesheet" />
-    <link href="libs/remark-css/datactivist-fonts.css" rel="stylesheet" />
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/datactivist.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/datactivist-fonts.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
@@ -224,11 +224,6 @@ class: inverse, center, middle
 ## Etape 1 : Sélectionner les données
 
 ---
-class: center, middle
-
-# Quelles données, ouvrables ou non, avez-vous dans vos services ?
-
----
 
 ### Étape 1 : .red[Selectionner les données]
 
@@ -240,21 +235,6 @@ class: center, middle
 
 .center[&lt;img src="./img/tableaucarto.png" height="280"/&gt;]
 
----
-class: center, middle
-
-# Exercice de cartographie de données
-
----
-
-### Étape 1 : .red[Selectionner les données à ouvrir en priorité]
-
-1.2 .red[Cette sélection se fait en fonction des objectifs et des moyens de votre structure].
-
-&gt; Il y a plusieurs possibilités : se conformer à une stratégie formalisée, suivre les demandes des communautés de réutilisateurs...
-
-
-## .center[![](img/Template_eval.png)]
 
 ---
 class: center, middle
