--- a/jour1.html
+++ b/jour1.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 # Comprendre les enjeux de l’ouverture des données publiques culturelles
 ## Ministère de la Culture
 ### Datactivist
-### Avril 2023
+### Juin 2023
 
 ---
 
@@ -1147,30 +1147,6 @@ Licence : de différents types
 
 ---
 
-### DoReMus :  .red[DOing REusable MUsic Data]
-
-Un projet de recherche en collaboration .red[avec de multiples partenaires culturels]
-
-Le projet s’appuie sur **l’expertise de catalogage des œuvres musicales** de : 
-
-* Radio France
-* la BnF
-* la Cité de la musique
-* du projet collaboratif Discotheka de la société Meaning Engines 
-* et sur un corpus de modèles préexistants, en particulier FRBRoo. 
-
-.red[**Un moteur de recherche] liant les données sur les dates des performances, les interprètes, les enregistrements, les instruments, les partitions, etc.. **
-
-* **Site du projet** : http://data.doremus.org/
-
-* **Github du projet** : https://github.com/DOREMUS-ANR 
-
-Licence : CC-BY 4.0
-
-.reduite[![](./img/data.doremus.org.png)]
-
----
-
 ### .red[SocFace]
 
 Projet de mise en données des recensements de population détenus par les services d'archives départementales de 1836 à 1936. Le projet est de développer des technologies de reconnaissance automatique d’écriture manuscrite pour analyser l’ensemble des listes nominatives et produire une base de données des individus ayant vécu en France durant cette période.
@@ -1241,6 +1217,16 @@ Ses pages sont indexées par les moteurs de recherche.
 [Paladia](http://zone47.com/crotos/palladia/), est un moteur de recherche et d'affichage d'une partie des collections du Musée Saint-Raymond.
 
 ![](./img/crotos.png)
+---
+
+### Valoriser .red[sa démarche]
+
+Le label [Culture Libre](https://www.wikimedia.fr/label-culture-libre/) de Wikimedia France valorise le travail des GLAM pour l'ouverture et le partage des savoirs
+
+1ère remise de labels le 25 avril à l'INHA à 16 institutions.
+
+![](img/Culturelibre.jpeg)
+*Photo : Wikimedia France*
 
 ---
 
