--- a/Jour2_version_2023.html
+++ b/Jour2_version_2023.html
@@ -219,6 +219,17 @@ class: middle
 
 ---
 
+### Avant toute chose .red[quelle stratégie ?]
+
+Il est toujours important de s'interoger sur le but et les objectifs de votre ouverture.
+* Que souhaitez-vous faire ?
+* Pour quelle(s) raison(s) le faites-vous ?
+* De quels moyens disposez-vous ?
+* Quels facteurs de réussite ?
+* Quelle temporalité ?
+
+---
+
 class: inverse, center, middle
 
 ## Etape 1 : Sélectionner les données
