--- a/jour1.html
+++ b/jour1.html
@@ -212,7 +212,7 @@ class: inverse, center, middle
 
 ---
 
-### Open data : un mouvement .red[aux multiples facettes]
+### Open data : un mouvement .red[né pour répondre à différents enjeux et besoins]
 
 **Brève introduction aux principales facettes** : 
 
@@ -1207,7 +1207,16 @@ Ses pages sont indexées par les moteurs de recherche.
 
 &gt; Le site permet de rassembler autour de ses pages auteur, œuvre, thème, date et lieu, des ressources de la Bibliothèque nationale de France, ainsi que des ressources extérieures. 
 
+---
 
+### Mettre à disposition des .red[données de références]
+
+Enjeux : partage, accès, interopérabilité des métadonnées.
+
+Des projets :
+* [Hadoc](https://www.culture.gouv.fr/Media/Documentation/Harmonisation-des-donnees-culturelles/Files/MCC-HADOC-REF-modele_harmonise_donnees_culturelles.pdf)
+* [OpenThéso](https://opentheso.huma-num.fr/opentheso/#)
+* Thésaurus en Skos de dataculture(http://data.culture.fr/thesaurus/)
 ---
 
 ### Profiter du potentiel du .red[web semantique]
@@ -1217,6 +1226,14 @@ Ses pages sont indexées par les moteurs de recherche.
 [Paladia](http://zone47.com/crotos/palladia/), est un moteur de recherche et d'affichage d'une partie des collections du Musée Saint-Raymond.
 
 ![](./img/crotos.png)
+---
+
+### Profiter du potentiel du .red[web semantique]
+
+Dans le futur : une aide à l'indexation ? Un exemple avec la reconnaissance des entités nommées basées sur Wikidata
+
+http://nerd.huma-num.fr/nerd/
+
 ---
 
 ### Valoriser .red[sa démarche]
