--- a/Jour2_version_2023.html
+++ b/Jour2_version_2023.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 # L’ouverture des données publiques culturelles en pratique
 ## Ministère de la Culture
 ### Datactivist - Anne-Laure Donzel
-### Avril 2023
+### Juin 2023
 
 ---
 
@@ -484,8 +484,7 @@ automatiquement ces données sur data.gouv.fr, pour pouvoir les exposer
 sur les deux plateformes à la fois.
 
 *Pour toute information sur la mise à disposition de nouveaux jeux de
-données, contacter le département de l'innovation numérique (SG/SCPCI)
-via l'onglet « Contact » de la plateforme data.culture.gouv.fr.*
+données, contacter le département concerné via l'onglet « Contact » de la plateforme data.culture.gouv.fr.*
 
 ---
 
