--- a/jour1.html
+++ b/jour1.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 # Comprendre les enjeux de l’ouverture des données publiques culturelles
 ## Ministère de la Culture
 ### Datactivist
-### Juin 2023
+### Novembre 2023
 
 ---
 
@@ -228,7 +228,7 @@ class: inverse, center, middle
 
 
 ---
-### [.red[Facette n°1 :]](https://books.openedition.org/cdf/5005?lang=fr) la transparence
+### [.red[Besoin n°1 :]](https://books.openedition.org/cdf/5005?lang=fr) renforcer la transparence
 
 Aller au-delà du droit d'accès et de la réédition des comptes (_accountability_) : réduire les asymétries d'information en accédant au matériau brut de l'information et du savoir
 
@@ -237,7 +237,7 @@ Aller au-delà du droit d'accès et de la réédition des comptes (_accountabili
 ]
 
 ---
-### [.red[Facette n°2 :]](https://books.openedition.org/cdf/5005?lang=fr) la libre circulation de l’information
+### [.red[Facette n°2 :]](https://books.openedition.org/cdf/5005?lang=fr) favoriser la libre circulation de l’information
 
 Dans la lignée de la cybernétique et du logiciel libre, la circulation des données comme valeur essentielle
 
@@ -245,7 +245,7 @@ Dans la lignée de la cybernétique et du logiciel libre, la circulation des don
 
 ---
 
-###  [.red[Facette n°3 :]](https://books.openedition.org/cdf/5005?lang=fr) la demande de données brutes
+###  [.red[Facette n°3 :]](https://books.openedition.org/cdf/5005?lang=fr) répondre à la demande de données brutes
 
 Dans la lignée des premières initatives de partage de données scientifiques en génétique ou en astronomie, obtenir les données sous leur forme pré-interprétative pour refaire les calculs
 
@@ -253,14 +253,14 @@ Dans la lignée des premières initatives de partage de données scientifiques e
 
 ---
 
-### [.red[Facette n°4 :]](https://books.openedition.org/cdf/5005?lang=fr) l'industrie de la donnée
+### [.red[Facette n°4 :]](https://books.openedition.org/cdf/5005?lang=fr) alimenter l'industrie de la donnée
 Le nouveau pétrole et les promesses démesurées de croissance
 
 .reduite[.center[![](https://images.pexels.com/photos/70362/oil-monahans-texas-sunset-70362.jpeg?cs=srgb&amp;dl=dawn-drill-evening-70362.jpg&amp;fm=jpg)]]
 
 ---
 
-### .red[Facette n°5 :] la modernisation des administrations
+### .red[Facette n°5 :] accompagner la modernisation des administrations
 
 Désiloter l'administration et ouvrir l'innovation, collaborer avec la société civile dans l'élaboration et la mise en œuvre des politiques publiques
 
@@ -308,17 +308,11 @@ class: center, middle
 .center[.reduite[![](https://datactivist.coop/aaf/img/ted.png)]]
 
 ---
-### Depuis 2010 : .red[l'ère des classements]
+### 2010 : .red[l'ère des classements]
 
 **[Le baromètre international de l'Open Data](https://index.okfn.org/place/)** est un classement de référence, tout comme l'Open Data Index de l'Open Knowledge Foundation, organisation internationale ayant pour objet de promouvoir la transparence des données publiques.
 
 ![baromètre international de l'Open Data](https://datactivist.coop/aaf/img/odb.png)
----
-
-### Depuis 2010 : .red[l'ère des classements]
-
-![Open Data Index de l'Open Knowledge Foundation](https://datactivist.coop/aaf/img/godi.png)
-
 ---
 
 ### 2013 : la [charte du G8 sur l'open data](https://www.modernisation.gouv.fr/sites/default/files/fichiers-attaches/charte-g8-ouverture-donnees-publiques-fr.pdf)
@@ -332,7 +326,7 @@ class: center, middle
 
 ---
 
-### Conclusion : des .red[principes et une définition] qui se normalisent
+### Conclusion : des .red[principes et une définition] qui se stabilisent
 
 * **.red[Une première définition du savoir ouvert] avec l'Open Definition** : "Ouvert signifie que tout le monde peut librement accéder, utiliser, modifier et partager (*des données ou informations*) dans n'importe quel but, sous réserve d'exigences qui en préservent la provenance et l'ouverture."
 
@@ -407,6 +401,12 @@ On y trouve des milliers de jeux de données, provenant principalement de produc
 .center[![](img/Datagouv2022.png)] 
 
 ---
+
+### Nouveau sur data.gouv : .red[thématique culture]
+
+[![](img/DG_theme_cult.png)](https://www.data.gouv.fr/fr/pages/donnees_culture/)
+
+---
 ### Au-delà de .red[data.gouv.fr]
 
 Data.gouv.fr est la plateforme **nationale** d'open data mais ce n'est pas la seule plateforme publique qui met à disposition des données ouvertes. Il existe :
@@ -437,6 +437,7 @@ Un portail open data est un espace de présentation des données publiques ouver
 
 * dispositifs éditoriaux pour animer le projet open data
 
+
 ---
 class: center, middle
 
@@ -461,6 +462,12 @@ class: center, middle
 
 .red[**2021**] : Une nouvelle nouvelle feuille de route "Données et contenus culturels" et nomination d'un AMDAC
 
+---
+### Un ministère qui .red[joue le jeu]
+
+Le ministère publie 2 éléments intéressants pour s'orienter et connaître sa démarche open data :
+* Le [catalogue des données du Ministère](https://data.culture.gouv.fr/explore/dataset/catalogue-des-donnees-du-ministere-de-la-culture/information/?disjunctive.sous_domaine)
+* Le [calendrier des futures publications de jeux de données](https://www.culture.gouv.fr/Thematiques/Innovation-numerique/Actualites/Open-data-decouvrez-le-calendrier-d-ouverture-du-ministere-de-la-Culture)
 ---
 
 class: inverse, center, middle
@@ -612,7 +619,7 @@ Trois grandes étapes caractérisent en France la **construction d’un droit de
 
 1. **Directive INSPIRE** de 2007
 
-1. **Directive PSI** de 2013
+1. **Directive PSI** de (2003, 2013 et 2019)
 
 1. **Loi Valter** de 2015
 
@@ -675,6 +682,17 @@ d'.red[**occulter les mentions protégées**]. L’administration n’est pas te
 Le droit de réutilisation issu de la directive PSI *se combine donc en France avec le droit d’accès aux documents administratifs* reconnu depuis 1978 : les informations contenues dans tout document administratif communicable sont, en principe, réutilisables « _par toute personne qui le souhaite à d'autres fins que celles de la mission de service public pour les besoins de laquelle les documents ont été élaborés ou sont détenus_ ». 
 
 &gt; Par cette combinaison, le droit français garantit ainsi une liberté effective de réutilisation bien plus grande que celle imposée par la directive ISP. Le principal apport de la transposition au droit français est d’avoir mis fin à l’interdiction de réutilisation des documents administratifs à des fins commerciales.
+
+---
+### Evolution de le directive PSI en .red[2019]
+
+Maintien d'un cadre d'exception pour le secteur culturel (bibliothèques, archives, musées)
+
+&gt;Pour les documents à l'égard desquels [...] des archives sont titulaires de droits de propriété intellectuelle [...] les États membres veillent à ce que, lorsque la réutilisation de ces documents est autorisée, ces derniers puissent être réutilisés à des fins commerciales ou non commerciales.
+
+Art. 3 de la directive
+
+PSI autorise la perception de redevances pour les données culturelles mais sous condition de critères.
 
 ---
 
@@ -1336,7 +1354,7 @@ Une bonne stratégie consiste à réduire les frictions :
 
 ### Bibliographie 1/3
 
-* [Politique du Ministère de la Culture pour  les codes sources, algorithmes et codes sources](https://www.culture.gouv.fr/content/download/314733/pdf_file/Politique_CALL_version_01_2022-06-29.pdf?version=1), juin 2022
+* [**Politique du Ministère de la Culture pour  les codes sources, algorithmes et codes sources**](https://www.culture.gouv.fr/content/download/314733/pdf_file/Politique_CALL_version_01_2022-06-29.pdf?version=1), juin 2022
 
 * [**Feuille de route – Données et contenus culturels**](https://www.culture.gouv.fr/Espace-documentation/Documentation-administrative/Feuille-de-route-Donnees-et-contenus-culturels), Publiée par le ministère de la Culture, septembre 2021
 
