--- a/Biblio_ressources.html
+++ b/Biblio_ressources.html
@@ -293,7 +293,7 @@ if (window.hljs) {
 <h1 class="title toc-ignore">Bibliographie et ressources</h1>
 <h3 class="subtitle">Cours open data - Ministère de la Culture</h3>
 <h4 class="author">Datactivist - Anne-Laure Donzel</h4>
-<h4 class="date">Avril 2023</h4>
+<h4 class="date">Novembre 2023</h4>
 
 
 
