--- a/Biblio_ressources.html
+++ b/Biblio_ressources.html
@@ -291,9 +291,9 @@ if (window.hljs) {
 
 
 <h1 class="title toc-ignore">Bibliographie et ressources</h1>
-<h3 class="subtitle">Cours open data - Ministère de la Culture</h3>
+<h3 class="subtitle">Formation open data - Ministère de la Culture</h3>
 <h4 class="author">Datactivist - Anne-Laure Donzel</h4>
-<h4 class="date">Novembre 2023</h4>
+<h4 class="date">Juin 2024</h4>
 
 
 
@@ -359,6 +359,10 @@ données - 06/11/2020[<a href="http://bit.ly/tutoOpenRefine" class="uri">http://
 <div id="journées-détude" class="section level1">
 <h1>Journées d’étude</h1>
 <ul>
+<li><p>Documentation de la journée Wikimédia <a href="https://meta.wikimedia.org/wiki/Journ%C3%A9e_Wikimedia_Culture_et_Num%C3%A9rique_2024"><em>Culture
+et Numérique 2024</em></a></p></li>
+<li><p>Documentation de la journée Wikimédia <a href="https://meta.wikimedia.org/wiki/Journ%C3%A9e_Wikimedia_Culture_et_Num%C3%A9rique_2023"><em>Culture
+et Numérique 2023</em></a></p></li>
 <li><p>Documentation de la journée Wikimédia <a href="https://meta.wikimedia.org/wiki/Journ%C3%A9e_Wikimedia_Culture_et_Num%C3%A9rique_2022/Documentation"><em>Culture
 et Numérique 2022</em></a></p></li>
 <li><p>Documentation de la journée Wikimédia <a href="https://meta.wikimedia.org/wiki/Journ%C3%A9e_Wikimedia_Culture_et_Num%C3%A9rique_2021/Documentation"><em>Culture
