--- a/Jour2_version_2023.html
+++ b/Jour2_version_2023.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 # L’ouverture des données publiques culturelles en pratique
 ## Ministère de la Culture
 ### Datactivist - Anne-Laure Donzel
-### Novembre 2023
+### Juin 2024
 
 ---
 
